# FloorDetection_with_GraphCut

./: .gitignore  CMakeLists.txt  README.md
data/: array_to_image.py  shrink_image.py
src/: FlowCut.hpp  flow_cut.hpp  main.cpp  matrix_io.cpp  matrix_io.hpp  timer.hpp  variable_conversion.hpp
